java version added to prompt